--- a/index.html
+++ b/index.html
@@ -143,34 +143,34 @@
                 <a href="index.html" class="my_footer_a my_footer_a_home">
                     <img class="act_img" src="img/caidan1.png"/>
                     <img class="no_act footer_list_t" src="img/caidan01.png"/>
-                    <span>赛报赛报</span>
+                    <span>赛报</span>
                 </a>
             </li>
             <li class="footer_list">
                 <a href="ranking.html" class="my_footer_a my_footer_a_bang">
-                    <img class="act_img"  src="img/caidan2.png" style="width: 21px">
-                    <img class="no_act" src="img/caidan02.png" style="width: 21px">
+                    <img class="act_img"  src="img/caidan2.png">
+                    <img class="no_act" src="img/caidan02.png">
                     <span>榜单</span>
                 </a>
             </li>
             <li class="footer_list footer_list_sai">
                 <a href="quiz.html"class="my_footer_a my_footer_sai">
-                    <img class="act_img"  src="img/caidan3.png" style="width: 48px;margin-bottom: 8px">
-                    <img class="no_act" src="img/caidan03.png" style="width: 48px;margin-bottom: 8px">
+                    <img class="act_img"  src="img/caidan3.png">
+                    <img class="no_act" src="img/caidan03.png">
                     <span>赛事</span>
                 </a>
             </li>
             <li class="footer_list">
                 <a href="mall.html" class="my_footer_a my_footer_show">
-                    <img class="act_img"  src="img/caidan4.png" style="width: 22px">
-                    <img class="no_act" src="img/caidan04.png" style="width: 22px">
+                    <img class="act_img"  src="img/caidan4.png">
+                    <img class="no_act" src="img/caidan04.png">
                     <span>积分商城</span>
                 </a>
                 </li>
             <li class="footer_list">
                 <a href="user.html" class="my_footer_a my_footer_my">
-                <img class="act_img" src="img/caidan5.png" style="width: 19px;margin-bottom: 8px">
-                <img class="no_act" src="img/user_light.png" style="width: 23px;margin-bottom: 3px;margin-top:8px;">
+                <img class="act_img" src="img/caidan5.png"/>
+                <img class="no_act" src="img/user_light.png"/>
                 <span>我的</span>
                 </a>
             </li>
