--- a/googs.html
+++ b/googs.html
@@ -3,7 +3,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">   
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	
+<title>{site.seo_title}</title>
+<meta name="keywords" content="{site.seo_keyword}" />
+<meta name="description" content="{site.seo_description}" />
+<link rel="stylesheet" type="text/css" href="/css/idangerous.swiper.css" />
+<link rel="stylesheet" type="text/css" href="/css/style.css" />
+<script type="text/javascript" charset="utf-8" src="/js/zepto.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/weui.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/common.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/idangerous.swiper-2.1.min.js"></script>
+        
     <title>世界杯</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="third/weiui/weui.min.css" />
@@ -19,10 +31,10 @@
         </div>
         <div class="page__bd page__bd_spacing" style="padding: 0 15px">
             <div class="weui-flex">
-                <div class="weui-flex__item"><div class="placeholder" style="margin: 10px 0 7px 0;">世界杯123</div></div>
+                <div class="weui-flex__item"><div class="placeholder" style="margin: 10px 0 7px 0;">世界杯1</div></div>
             </div>
             <div class="weui-flex">
-                <div class="weui-flex__item"><div class="placeholder">我是测页面试</div></div>
+                <div class="weui-flex__item"><div class="placeholder">充值卡13123</div></div>
                 <div class="weui-flex__item"><div class="placeholder my_placeholder">
                     <strong>290000</strong>
                     <img  style="width: 20px" src="img/goods_money.png">
